cfn-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for VPC with public subnets, EC2 instance, and security groups

Parameters:
  Environment:
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - staging
      - prod
    Description: Environment name

  VpcCidr:
    Type: String
    Default: 10.1.0.0/16
    Description: CIDR block for VPC
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$

  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: EC2 Key Pair for SSH access
    Default: kohei

  AllowedSshCidr:
    Type: String
    Default: 0.0.0.0/0
    Description: CIDR block allowed to SSH (recommend limiting to your IP)
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$

  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    Description: EC2 instance type

Resources:
  # VPC
  FirstVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-First-CF-VPC
        - Key: Environment
          Value: !Ref Environment

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-CF-IGW
        - Key: Environment
          Value: !Ref Environment

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref FirstVPC
      InternetGatewayId: !Ref InternetGateway

  # Route Tables for Frontend (Public Subnets)
  FrontendRouteTable1:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-FrontendRoute1
        - Key: Environment
          Value: !Ref Environment

  FrontendRouteTable2:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-FrontendRoute2
        - Key: Environment
          Value: !Ref Environment

  # Route Tables for Backend (Public Subnets - for practice)
  # Note: In production, backend subnets should be private with NAT Gateway
  BackendRouteTable1:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-BackendRoute1
        - Key: Environment
          Value: !Ref Environment

  BackendRouteTable2:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-BackendRoute2
        - Key: Environment
          Value: !Ref Environment

  # Routes to Internet Gateway
  FrontendRoute1:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref FrontendRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  FrontendRoute2:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref FrontendRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  BackendRoute1:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref BackendRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  BackendRoute2:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref BackendRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Subnets
  FrontendSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref FirstVPC
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-FrontendSubnet1
        - Key: Environment
          Value: !Ref Environment

  FrontendSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.1.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref FirstVPC
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-FrontendSubnet2
        - Key: Environment
          Value: !Ref Environment

  BackendSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.3.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref FirstVPC
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-BackendSubnet1
        - Key: Environment
          Value: !Ref Environment

  BackendSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.4.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref FirstVPC
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-FirstVPC-BackendSubnet2
        - Key: Environment
          Value: !Ref Environment

  # Subnet Route Table Associations
  FrontendSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet1
      RouteTableId: !Ref FrontendRouteTable1

  FrontendSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet2
      RouteTableId: !Ref FrontendRouteTable2

  BackendSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BackendSubnet1
      RouteTableId: !Ref BackendRouteTable1

  BackendSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BackendSubnet2
      RouteTableId: !Ref BackendRouteTable2

  # Security Group
  SecurityGroupForEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 instance with HTTP/HTTPS egress
      GroupName: !Sub ${Environment}-aws-ec2-sg-forCFN
      VpcId: !Ref FirstVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSshCidr
          Description: SSH access
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: HTTPS access
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-EC2-SecurityGroup
        - Key: Environment
          Value: !Ref Environment

  # EC2 Instance
  EC2instance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}'
      SubnetId: !Ref FrontendSubnet1
      SecurityGroupIds:
        - !Ref SecurityGroupForEC2
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-EC2-Instance1
        - Key: Environment
          Value: !Ref Environment

# Outputs
Outputs:
  VpcId:
    Description: VPC ID
    Value: !Ref FirstVPC
    Export:
      Name: !Sub ${AWS::StackName}-VPC-ID

  FrontendSubnet1Id:
    Description: Frontend Subnet 1 ID (ap-northeast-1a)
    Value: !Ref FrontendSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-FrontendSubnet1-ID

  FrontendSubnet2Id:
    Description: Frontend Subnet 2 ID (ap-northeast-1c)
    Value: !Ref FrontendSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-FrontendSubnet2-ID

  BackendSubnet1Id:
    Description: Backend Subnet 1 ID (ap-northeast-1a)
    Value: !Ref BackendSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-BackendSubnet1-ID

  BackendSubnet2Id:
    Description: Backend Subnet 2 ID (ap-northeast-1c)
    Value: !Ref BackendSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-BackendSubnet2-ID

  SecurityGroupId:
    Description: Security Group ID
    Value: !Ref SecurityGroupForEC2
    Export:
      Name: !Sub ${AWS::StackName}-SecurityGroup-ID

  EC2InstanceId:
    Description: EC2 Instance ID
    Value: !Ref EC2instance1

  EC2PublicIp:
    Description: EC2 Instance Public IP
    Value: !GetAtt EC2instance1.PublicIp

  EC2PrivateIp:
    Description: EC2 Instance Private IP
    Value: !GetAtt EC2instance1.PrivateIp
